index.html.erb structure --> added

--- a/app/views/layouts/_flash_messages.html.erb
+++ b/app/views/layouts/_flash_messages.html.erb
@@ -1,7 +1,8 @@
 <% flash.each do |name, message| %>
-  <div class="alert alert-<%= name %>" role="alert">
+  <section class="alert alert-<%= name %>" role="alert">
     <%= message %>
-  </div>
+  </section>
 <% end %>
+
 
 
