--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -8,7 +8,7 @@
 <section>
   <% @pictures.each do |p| %>
   <section>
-    <%=# image_tag p.image.url %>
+<!--   Insert the Picture.image.url-->
     <article>
       <%= image_tag "index.png" %>
       <%= @likes.where(picture_id: p.id).count %>
@@ -17,13 +17,21 @@
       <% @comments.each do |c| %>
       <article>
         <% user = @users.find(c.user_id) %>
-        <%= image_tag  user.image.url%>
-        <p><%= c.comment %></p>
+<!--        Insert the comments User image.url-->
+        <% if c.picture_id == p.id %>
+          <p><%= c.comment %></p>
+        <% end %>
       </article>
      <% end %>
-      <artice>
-        #Kommentar schreiben!
-      </artice>
+      <article>
+<!--        insert the image of the current_user-->
+        <%= form_for :comment do |nc| %>
+          <% nc.text_field :user_id, :input_html => { :value => @current_user.id} %>
+          <% nc.text_field :picture_id, :input_html => { :value => p.id} %>
+          <%= nc.text_field :comment %>
+          <% nc.submit %>
+        <% end %>
+      </article>
     </article>
 
     <%=  %>
