--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,38 +1,43 @@
 <%= image_tag "index.png" %>
 <%= link_to button_tag("Logout"), logout_path %>
-<%= link_to image_tag("index.png"), home_profile_path%>
+<%= link_to image_tag("index.png"), home_profile_path %>
 <section>
   <h1>My pinwall</h1>
-  <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonoumy eirmod tmpor invidunt ut labore et dolore magna aliquyam erat, sed diam cpluputa. At vero eos et accusam et just.</p>
+  <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonoumy eirmod tmpor invidunt ut labore et dolore
+    magna aliquyam erat, sed diam cpluputa. At vero eos et accusam et just.</p>
 </section>
 <section>
   <% @pictures.each do |p| %>
 
-  <section>
-<!--   Insert the Picture.image.url-->
-    <article>
-      <%= image_tag "index.png" %>
-      <%= @likes.where(picture_id: p.id).count %>
-    </article>
-    <article>
-      <% @comments.each do |c| %>
+    <section class="post">
+      <!--   Insert the Picture.image.url-->
       <article>
-        <% user = @users.find(c.user_id) %>
-<!--        Insert the comments User image.url-->
-        <% if c.picture_id == p.id %>
-          <p><%= c.comment %></p>
-        <% end %>
+        <%= image_tag "index.png" %>
       </article>
-     <% end %>
-      <article>
-<!--        insert the image of the current_user-->
+      <article class="likes">
+        <%= @likes.where(picture_id: p.id).count %>
+      </article>
+      <article class="comment-box">
+        <% @comments.each do |c| %>
+          <% if c.picture_id == p.id %>
+            <article class="comment-single">
+              <% user = @users.find(c.user_id) %>
+              <!--        Insert the comments User image.url-->
+
+              <p><%= c.comment %></p>
+
+            </article>
+          <% end %>
+        <% end %>
+        <article class="comment-new">
+          <!--        insert the image of the current_user-->
           <%= form_for :comment do |new_comment| %>
-          <%= new_comment.hidden_field :picture_id, value: p.id %>
-          <%= new_comment.text_field :comment %>
-          <% new_comment.submit %>
-        <% end %>
+            <%= new_comment.hidden_field :picture_id, value: p.id %>
+            <%= new_comment.text_field :comment, class: "comment-new-input", placeholder: "Comment..." %>
+            <% new_comment.submit %>
+          <% end %>
+        </article>
       </article>
-    </article>
-  </section>
+    </section>
   <% end %>
 </section>
