profile pictures work! break

--- a/app/views/home/profile.html.erb
+++ b/app/views/home/profile.html.erb
@@ -1,15 +1,16 @@
 <%= link_to image_tag("index.png"), home_home_path%>
 <section>
-    <%= form_for :user do |user| %>
-    <section>
+  <section>
+    <%= form_with model: @user, url: update_user_path do |i| %>
+      <%= i.file_field :image %>
+      <%= i.submit "Submit" %>
+    <% end %>
+    <%= image_tag(@current_user.image.url) %>
+    <%= link_to "Reset to default image.", default_image_path, method: :put %>
+  </section>
 
-      <%= form_for :picture do |i| %>
-        <%= i.file_field :image %>
-        <%= i.submit "Submit" %>
-      <% end %>
-      <%= image_tag(@current_user.image.url) %>
+    <%= form_with model: @user, url: update_user_path do |user| %>
 
-    </section>
     <section>
     <%= user.text_field :username, value: @current_user.username%>
       <article>
@@ -20,4 +21,6 @@
     <%= user.hidden_field :id, value: @current_user.id %>
     <%= user.submit "Save changes", data: { confirm: "Are you sure that you want to update your profile?" } %>
     <% end %>
+
+    <%= link_to "Delete your account", delete_user_path, method: :delete, data: { confirm: "Are you sure that you want to delete your account permenently? \n\r There will be no way to restore your account!" }  %>
 </section>
