--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -22,8 +22,7 @@
           <% if c.picture_id == p.id %>
             <article class="comment-single">
               <% user = @users.find(c.user_id) %>
-              <!--        Insert the comments User image.url-->
-
+              <%= image_tag(user.image.url) %>
               <p><%= c.comment %></p>
 
             </article>
@@ -34,7 +33,7 @@
           <%= form_for :comment do |new_comment| %>
             <%= new_comment.hidden_field :picture_id, value: p.id %>
             <%= new_comment.text_field :comment, class: "comment-new-input", placeholder: "Comment..." %>
-            <% new_comment.submit 'create_comment' %>
+            <% new_comment.submit 'create comment' %>
           <% end %>
         </article>
       </article>
@@ -44,8 +43,8 @@
 <% if @current_user.email == "aaron@familiehari.ch" %>
 <section>
   <%= form_for :picture do |p| %>
-   <%= p.file_field :image %>
-    <%= p.submit 'Upload Picture' %>
+    <%= p.file_field :image %>
+    <%= p.submit 'Upload picture' %>
   <% end %>
 </section>
 <% end %>
