--- a/app/views/layouts/_flash_messages.html.erb
+++ b/app/views/layouts/_flash_messages.html.erb
@@ -1,5 +1,5 @@
 <% flash.each do |name, message| %>
-  <section class="alert alert-<%= name %>" role="alert">
+  <section class="alert alert-<%= name %> flash-messages" role="alert">
     <%= message %>
   </section>
 <% end %>
