--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -30,15 +30,16 @@
 }
 
 .logo {
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 
 .login-box {
   background-color: #FFFFFF;
   border-radius: 5px;
-  width: 18rem;
+  width: 24rem;
   margin-left: 8rem;
   margin-right: 8rem;
+  font-size: 1.5rem;
 }
 
 .login-box-gui {
@@ -60,10 +61,11 @@
 
 .title {
   color: #FFFFFF;
+  width: 46rem;
   h1{
-    font-size: 6rem;
+    font-size: 8em;
     align-self: flex-start;
-    ;
+    font-weight: bold;
   }
   h2{
     font-size: 4rem;
