--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,10 @@
 <footer class="flex-container">
-    <p>Aaron Hari</p>
-    <p>aaron.hari@csbe.ch</p>
-    <p>078 892 66 49</p>
-    <p>aa.hari</p>
+  <p class="footer-item">Aaron Hari</p>
+  <p class="footer-item">aaron.hari@csbe.ch</p>
+  <p class="footer-item">078 892 66 49</p>
+  <section class="flex-container footer-item instagram-link">
+    <i class="fa fa-instagram instagram-icon"></i>
+    <a href="https://www.instagram.ch/aa.hari">aa.hari</a>
+  </section>
+
 </footer>
