--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -1,6 +1,32 @@
 footer {
   width: 100%;
-  .flex-container{
-    flex-direction: row;
-  }
+  height: 6rem;
+  background-color: #E1E1E1;
+  justify-content: space-around;
+  align-items: center;
+  position: absolute;
+  bottom: 0;
+
 }
+
+.footer-item {
+  margin-top: 1.3rem;
+}
+
+.instagram-link {
+  margin-top: 0rem;
+  gap: 0.7rem;
+
+  .instagram-icon {
+    margin-top: 0rem;
+    font-size: 3rem;
+  }
+
+  a {
+    margin-top: 0rem;
+    text-decoration: none;
+    color: #000000;
+  }
+
+}
+
