--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -1,12 +1,13 @@
 .form-for-edit {
-  width: 30%;
   flex-direction: column;
+
 }
 
 .edit-section {
-  margin-top: 10rem;
+  margin-top: 15rem;
   justify-content: space-around;
-  width: 100%;
+  width: 50%;
+
 
 
   .first-lastname {
@@ -18,15 +19,18 @@
   .reset-upload {
     flex-direction: column;
     align-items: center;
+    width: 20%;
+    text-align: center;
 
     .default-image {
       margin-top: 1rem;
+      width: 80%;
+      align-self: auto;
     }
 
     .file-upload {
       width: auto;
       justify-content: space-between;
-      gap: 1rem;
 
       .image {
         width: 10rem;
@@ -71,4 +75,10 @@
   width: 0;
   height: 0;
   visibility: hidden;
+}
+
+.form-with {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
