--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -11,20 +11,46 @@
   position: absolute;
 }
 
-.foreground {
-  position: absolute;
-  bottom: 0;
+.foreground-home {
+  position: absolute !important;
   top: 0;
   width: 100%;
   height: 100%;
   justify-content: space-around;
-  flex-direction: row;
+  flex-direction: column !important;
+  align-content: center;
+  //margin-top: -20rem;
+
+  .title {
+    display: flex;
+    width: 60%;
+    flex-direction: column;
+    margin-top: -20rem;
+
+    h1 {
+      margin-top: -25rem;
+      margin-bottom: 0;
+      font-size: 8rem;
+      width: 41rem;
+    }
+
+    p {
+      font-size: 2rem;
+      align-self: flex-end;
+      margin-top: 4rem;
+      width: 70%;
+    }
+  }
 
   .logout-and-profile {
     justify-content: space-between;
+    width: 100%;
+    margin-top: -26rem;
 
     .logout-button {
       margin-left: 4rem;
+      width: 10rem;
+
     }
 
     .profile-icon-link {
