--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -15,30 +15,30 @@
       magna aliquyam erat, sed diam cpluputa. At vero eos et accusam et just.</p>
   </section>
 </section>
-<section>
-  <% @pictures.each do |p| %>
 
+<section class="posts-box">
+  <% @pictures.each do |p| %>
     <section class="post">
-      <!--   Insert the Picture.image.url-->
-      <article>
-        <%= image_tag(p.image.url) %>
-      </article>
-      <article class="likes">
+      <%= image_tag p.image.url, class: "post-image" %>
+      <article class="likes flex-container">
         <%= form_for :like do |l| %>
           <%= l.hidden_field :picture_id, value: p.id %>
           <%= l.hidden_field :user_id, value: @current_user.id %>
-          <%= l.submit "Like" %>
+          <% if @likes.find_by(user_id: @current_user.id, picture_id: p.id) != nil %>
+            <%= l.submit "Like", commit: "Like" %>
+          <% else %>
+            <%= l.submit "Like" %>
+          <% end %>
         <% end %>
         <%= @likes.where(picture_id: p.id).count %>
       </article>
       <article class="comment-box">
         <% @comments.each do |c| %>
           <% if c.picture_id == p.id %>
-            <article class="comment-single">
+            <article class="comment-single flex-container">
               <% user = @users.find(c.user_id) %>
-              <%= image_tag(user.image.url) %>
-              <p><%= c.comment %></p>
-
+              <%= image_tag user.image.url, class: "profile-picture" %>
+              <p class="comment"><%= c.comment%></p>
             </article>
           <% end %>
         <% end %>
@@ -54,6 +54,7 @@
     </section>
   <% end %>
 </section>
+
 <% if @current_user.email == "aaron@familiehari.ch" %>
   <section>
     <%= form_for :picture do |p| %>
