--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -19,7 +19,6 @@
   justify-content: space-around;
   flex-direction: column !important;
   align-content: center;
-  //margin-top: -20rem;
 
   .title {
     display: flex;
@@ -119,6 +118,9 @@
       width: 25rem;
       -ms-overflow-style: none;
       scrollbar-width: none;
+      ::-webkit-scrollbar {
+        display: none;
+      }
 
       .comment-single {
         padding: 1rem;
@@ -127,16 +129,29 @@
 
 
         .profile-picture {
-          width: 3rem;
-          height: 3rem;
+          width: 3rem !important;
+          height: 3rem !important;
           border-radius: 1.5rem;
           object-fit: cover !important;
         }
 
         .comment {
           margin: 0.5rem;
+          hyphens: auto;
+          width: 270px;
         }
       }
+
+      .comment-new {
+        position: sticky;
+        bottom: 0;
+        width: 100%;
+
+        .comment-new-input {
+          width: 100%;
+        }
+      }
+
     }
   }
 
@@ -144,15 +159,6 @@
 }
 
 
-.comment-new {
-  position: sticky;
-  top: 100%;
-  width: 100%;
-
-  .comment-new-input {
-    width: 100%;
-  }
-}
 
 
 body {
