--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,12 +1,12 @@
 <section class="title-picture"></section>
 <section class="foreground-home flex-container">
   <section class="logout-and-profile flex-container">
-  <%= link_to "Logout", logout_path, class: "logout-button form-control" %>
-  <a href="/../home/profile" class="profile-icon-link">
-    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-gear-fill icon profile-icon" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-      <path fill-rule="evenodd" d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 0 0-5.86 2.929 2.929 0 0 0 0 5.858z"/>
-    </svg>
-  </a>
+    <%= button_to "Logout", logout_path, method: :get, class: "logout-button form-control" %>
+    <a href="/../home/profile" class="profile-icon-link">
+      <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-gear-fill icon profile-icon" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd" d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 0 0-5.86 2.929 2.929 0 0 0 0 5.858z"/>
+      </svg>
+    </a>
   </section>
   <section class="flex-container title">
     <h1>My pinwall</h1>
@@ -38,7 +38,7 @@
             <% end %>
           <% end %>
         <% end %>
-        <p class="quantity-likes"><%= @likes.where(picture_id: p.id).count%></p>
+        <p class="quantity-likes"><%= @likes.where(picture_id: p.id).count %></p>
       </article>
 
       <article class="comment-box">
@@ -47,7 +47,7 @@
             <article class="comment-single flex-container">
               <% user = @users.find(c.user_id) %>
               <%= image_tag user.image.url, class: "profile-picture" %>
-              <p class="comment"><%= c.comment%></p>
+              <p class="comment"><%= c.comment %></p>
             </article>
           <% end %>
         <% end %>
