post-image:hover added Welcoming text added

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -94,6 +94,11 @@
     }
 
 
+    .post-image:hover {
+      transform: scale(1.3);
+    }
+
+
     .likes {
       width: 4rem;
       margin: 2rem;
