--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -10,9 +10,9 @@
   </section>
   <section class="flex-container title">
     <h1>My pinwall</h1>
-    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonoumy eirmod tmpor invidunt ut labore et
-      dolore
-      magna aliquyam erat, sed diam cpluputa. At vero eos et accusam et just.</p>
+    <p>On this Page you'll find all the pictures I post. I love the challenge of trying to capture the nature.
+      I'm thankful to have the opportunity to share my progress an take you with me on that journey.
+      Feel free to comment or like a picture.</p>
   </section>
 </section>
 
